# semantra

./: pyproject.toml  sem.bat  semantra.bat
client/src/components/: PdfChars.svelte
src/semantra/: models.py  pdf.py  semantra.py  util.py
