[tool.poetry]
name = "semantra"
version = "0.1.8"
description = "A semantic search CLI tool"
authors = ["Dylan Freedman <freedmand@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11, <=3.13"
annoy_fixed = "^1.16.3"
click = "^8.1.3"
Flask = "^2.2.3"
openai = "^1.14.2"
Pillow = "^9.5.0"
pypdfium2 = "^4.5.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.6.0"
torch = "^2.2.1"
tqdm = "^4.65.0"
transformers = "^4.39.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/freedmand/semantra"
"Repository" = "https://github.com/freedmand/semantra"
"Bug Tracker" = "https://github.com/freedmand/semantra/issues"

[tool.poetry.scripts]
semantra = "src.semantra.semantra:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
semantra = ["client_public"]
